--- a/templates/index_chart.html
+++ b/templates/index_chart.html
@@ -135,7 +135,7 @@
 
         source.onmessage = function (event) {
             const data = JSON.parse(event.data);
-            if (config.data.labels.length === 20) {
+            if (config.data.labels.length > 100) {
                 config.data.labels.shift();
                 config.data.datasets[0].data.shift();
 				config.data.datasets[1].data.shift();
