--- a/templates/index_chart.html
+++ b/templates/index_chart.html
@@ -115,12 +115,12 @@
                          id: "A",
 						 position: 'left',
 						 scaleLabel: { display: true, labelString: 'Temperature oC' },
-						 ticks: { suggestedMax: -20,  suggestedMax: 30 }
+						 ticks: { suggestedMin: -20,  suggestedMax: 30 }
                          }, {
                          id: "B",
 						 position: 'right',
 						 scaleLabel: { display: true, labelString: 'Capacitance pF'},
-						 ticks: { suggestedMax: 0,  suggestedMax: 3, scaleBeginAtZero : false }
+						 ticks: { suggestedMin: 0,  suggestedMax: 3, scaleBeginAtZero : false }
                     }]
                 }
             }
